Add files via upload
Continued implementing DTO, changed permission for roles